--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -19,6 +19,12 @@ knitr::opts_chunk$set(
 library(Stat302Package)
 ```
 
+## 1. Introduction
+
+This package is created as a class project for Stat302 in UW. It contains four formulas: `my_t_test`, `my_lm`, `my_knn_cv`, and `my_rf_cv``.
+This package is collabrated by Celeste Zeng and Simona Liao.
+
+Install the package using:
 ```{r, eval = FALSE}
 devtools::install_github("SimonaLiao/Stat302Package", build_vignette = TRUE, build_opts = c())
 library(Stat302Package)
@@ -63,26 +69,36 @@ From the test result, we can know that the p_value is greater than 0.05. So the 
 
 ##3. Tutorial for `my_lm`
 ```{r}
+library(tidyverse)
 test <- my_lm(my_fml = lifeExp ~ gdpPercap + continent, my_data = my_gapminder)
-my_coef <- test[1]
-my_matrix <- cbind(1, my_gapminder$gdpPercap)
-y_hat <- my_matrix %*% as.matrix(my_coef)
-plot(my_gapminder$lifeExp, y_hat)
+estimate <- test[2, 1]
+p_val <- test[2, 4]
 ```
-From the statistics above, we know that the expected difference in the response `lifeExp` between two observations differing by one unit in `gdpPercap`, with all other covariates identical, is about 4.45 * 10^-4. Comparing to the coeffiecients of different continents, `gdpPercap` has less influence on `lifeExp` than `continent`.
+From the statistics above, we know that the expected difference in the response `lifeExp` between two observations differing by one unit in `gdpPercap`, with all other covariates identical, is about 4.45 * 10^-4. Comparing to the coeffiecients of different continents, differences in `gdpPercap` have less influence on `lifeExp` than differences in `continent`.
 
+Now, we will do a two sided hypothesis test associated with the `gdpPercap` coefficient. The null hypothesis is that there will be no significant prediction of `lifeExp` by `gdpPercap`.
+
+  \begin{align}
+  H_0: \beta &= 0,\\
+  H_a: \beta &\neq 0.
+  \end{align}
+
+The p-value for the hypothesis test is `r p_val`, which is smaller than 0.05. The result is statistically significant and we have sufficient evidence to reject the null hypothesis. There will be significant prediction of `lifeExp` by `gdpPercap`.
+  
 ```{r}
-# library(tidyverse)
-
-# #mod_fits <- fitted(test)
-# my_df <- data.frame(actual = my_gapminder$lifeExp, fitted = test)
-# ggplot(my_df, aes(x = test, y = actual)) +
-#   geom_point() +
-#   geom_abline(slope = 1, intercept = 0, col = "red", lty = 2) + 
-#   theme_bw(base_size = 15) +
-#   labs(x = "Fitted values", y = "Actual values", title = "Actual vs. Fitted") +
-#   theme(plot.title = element_text(hjust = 0.5))
+my_coef <- test[, 1]
+my_matrix <- model.matrix(lifeExp ~ gdpPercap + continent, data = my_gapminder)
+y_hat <- my_matrix %*% as.matrix(my_coef)
+my_df <- data.frame("actual" = my_gapminder$lifeExp, "fitted" = y_hat, "continent" = my_gapminder$continent)
+ ggplot(my_df, aes(x = actual, y = fitted, color = continent)) +
+   geom_point() +
+   geom_abline(slope = 1, intercept = 0, col = "black") + 
+   theme_bw(base_size = 15) +
+   labs(x = "Fitted values", y = "Actual values", title = "Actual vs. Fitted") + 
+   theme(plot.title = element_text(hjust = 0.5))
 ```
+
+From the graph of actual values and fitted values above, we can find out that this model is very inaccurate in the prediction of countries in Africa. But it did a good job of predicting the life expectancy in European countries.
 
 
 
