--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -23,7 +23,7 @@ library(tidyverse)
 ```
 ## 1. Introduction
 
-This package is created as a class project for Stat302 in UW. It contains four formulas: `my_t_test`, `my_lm`, `my_knn_cv`, and `my_rf_cv``.
+This package is created as a class project for Stat302 in UW. It contains four formulas: `my_t_test`, `my_lm`, `my_knn_cv`, and `my_rf_cv`.
 This package is collabrated by Celeste Zeng and Simona Liao.
 
 Install the package using:
