--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Project 3: Stat302Package Tutorial"
-author: "Simona Liao"
+author: "Simona Liao, Celeste Zeng"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Stat302Package Tutorial}
@@ -15,12 +15,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(Stat302Package)
-library(ggplot2)
-library(magrittr)
-library(tidyverse)
-```
 ## 1. Introduction
 
 This package is created as a class project for Stat302 in UW. It contains four formulas: `my_t_test`, `my_lm`, `my_knn_cv`, and `my_rf_cv`.
@@ -35,6 +29,15 @@ help(package = "Stat302Package", help_type = "html")
 # Use this to view the vignette as an isolated HTML file
 utils::browseVignettes(package = "Stat302Package")
 ```
+To begin, we load our example data set `my_gapminder`.
+
+```{r setup}
+library(Stat302Package)
+library(ggplot2)
+library(magrittr)
+library(tidyverse)
+data("my_gapminder")
+```
 
 ## 2. Tutorial For `my_t.test`
 All the tests demonstrated below use `lifeExp` data from `my_gapminder`.
@@ -44,10 +47,11 @@ All the tests demonstrated below use `lifeExp` data from `my_gapminder`.
   H_0: \mu &= 60,\\
   H_a: \mu &\neq 60.
   \end{align}
+ 
 ```{r}
-data("my_gapminder")
 my_t_test(my_gapminder$lifeExp, mu = 60, alternative = "two.sided")
 ```
+
 From the test result, we can know that the p_value is greater than 0.05. So the result is not statistically significant and we do not have enough evidence to reject the null hypothesis, H_0.
 
 ### case II: alternative = "less"
@@ -65,9 +69,11 @@ From the test result, we can know that the p_value is less than 0.05. So the res
   H_0: \mu &= 60,\\
   H_a: \mu &> 60.
   \end{align}
+  
 ```{r}
 my_t_test(my_gapminder$lifeExp, mu = 60, alternative = "greater")
 ```
+
 From the test result, we can know that the p_value is greater than 0.05. So the result is not statistically significant and we do not have enough evidence to reject the null hypothesis, H_0.
 
 ##3. Tutorial for `my_lm`
@@ -78,6 +84,7 @@ estimate <- test[2, 1]
 p_val <- test[2, 4]
 test
 ```
+
 From the statistics above, we know that the expected difference in the response `lifeExp` between two observations differing by one unit in `gdpPercap`, with all other covariates identical, is `r estimate`. Comparing to the coeffiecients of different continents, differences in `gdpPercap` have less influence on `lifeExp` than differences in `continent`.
 
 Now, we will do a two sided hypothesis test associated with the `gdpPercap` coefficient. The null hypothesis is that there will be no significant prediction of `lifeExp` by `gdpPercap`.
@@ -88,6 +95,8 @@ Now, we will do a two sided hypothesis test associated with the `gdpPercap` coef
   \end{align}
 
 The p-value for the hypothesis test is `r p_val`, which is smaller than 0.05. The result is statistically significant and we have sufficient evidence to reject the null hypothesis. There will be significant prediction of `lifeExp` by `gdpPercap`.
+
+Now, we are going to plot the Actual vs. Fitted values using `ggplot2`.
   
 ```{r}
 my_coef <- test[, 1]
@@ -103,9 +112,11 @@ my_df <- data.frame("actual" = my_gapminder$lifeExp, "fitted" = y_hat, "continen
 ```
 
 From the graph of actual values and fitted values above, we can find out that this model is very inaccurate in the prediction of countries in Africa. But it did a good job of predicting the life expectancy in European countries.
+
 ##4. Tutorial for `my_knn_cv` 
 
-Predict Using the my_gapminder dataset, we predict output class continent using covariates gdpPercap and lifeExp by utilizing 5-fold cross validation (k_cv = 5).
+Predict Using the `my_gapminder` dataset, we predict output class continent using covariates `gdpPercap` and `lifeExp` by utilizing 5-fold cross validation (k_cv = 5).
+
 ```{r}
 # For each value of k_nn, record the training misclassification rate and the CV misclassification rate
 knn_vector <- c(1 : 10)
@@ -123,16 +134,15 @@ for (i in 1 : 10) {
 tu_knn <- data.frame("k_nn" = tu_knn[, 1], "training_misclassification_rate" = tu_knn[, 2], 
                      "CV_misclassification_rate" = tu_knn[, 3])
 ```
-I will use k_nn = 1 model you would choose based on the training misclassification rates; and I will use k_nn = 10 based on the CV misclassification rates;
-I will use cross-validation to identify optimal k and
-choose it as my k_nn(which is 10) because CV splits data into
-k folds to use as much data as possible to train the model while still having out-of-sample test data.
-CV is a great tool to choose values for tuning parameters across a number of algorithms, not just
-k-nearest neighbors.
+
+I will use k_nn = 1 model you would choose based on the training misclassification rates. I will use k_nn = 10 based on the CV misclassification rates. I will use cross-validation to identify optimal k and choose it as my k_nn(which is 10) because CV splits data into k folds to use as much data as possible to train the model while still having out-of-sample test data.
+
+CV is a great tool to choose values for tuning parameters across a number of algorithms, not just k-nearest neighbors.
 
 ##5. Tutorial for `my_rf_cv`
 
-Predict lifeExp using covariate gdpPercap.
+Predict `lifeExp` using covariate `gdpPercap`.
+
 ```{r}
 k_vector <- c(2, 5, 10)
 tu_rf <- matrix(NA, nrow = 90, ncol = 2)
@@ -163,11 +173,7 @@ rf_table <- data.frame("k_values" = c(2, 5, 10),"mean" = rf_matrix[, 1], "sd" = 
 
 ```
 
-Results of observation: as k gets bigger the means of CV estimation also get bigger, but the standard
-deviations get smaller. Also, the ranges of CV estimates also get smaller as k gets bigger.
-According to the Bias-Variance Tradeoff, larger K means less bias towards overestimating the true
-expected error (as training folds will be closer to the total dataset) but higher variance and higher
-running time (as I am getting closer to the limit case: Leave-One-Out CV);
-Although the results of rf_table shows decreasing standard deviation/variance, it is because Variance of cross-validation is more u-shaped than linearly increasing. Decreases at first because I am taking the
-average of more trials (the number of folds). It increases later because as k approaches n, the folds
-become highly correlated. If I add a k-value of 100, the standard deviation/variance will be larger.
+Results of observation: as k gets bigger the means of CV estimation also get bigger, but the standard deviations get smaller. Also, the ranges of CV estimates also get smaller as k gets bigger.
+
+According to the Bias-Variance Tradeoff, larger K means less bias towards overestimating the true expected error (as training folds will be closer to the total dataset) but higher variance and higher running time (as I am getting closer to the limit case: Leave-One-Out CV).
+Although the results of rf_table shows decreasing standard deviation/variance, it is because Variance of cross-validation is more u-shaped than linearly increasing. Decreases at first because I am taking the average of more trials (the number of folds). It increases later because as k approaches n, the folds become highly correlated. If I add a k-value of 100, the standard deviation/variance will be larger.
